[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/FontAwesome/fontawesome-webfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/FontAwesome/FontAwesome.gd" type="Script" id=2]
[ext_resource path="res://app_core/modules/alert/alert.gd" type="Script" id=3]
[ext_resource path="res://app_core/modules/alert/alert_dynamic_label.gd" type="Script" id=4]
[ext_resource path="res://app_core/fonts_preload/DroidSans.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[node name="Alert" type="MarginContainer"]
visible = false
margin_top = 322.0
margin_right = 394.0
margin_bottom = 432.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
font_color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 394.0
margin_bottom = 110.0
mouse_filter = 2

[node name="icon" type="MarginContainer" parent="VBoxContainer"]
margin_right = 394.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 5

[node name="FontAwesome" type="Label" parent="VBoxContainer/icon"]
margin_right = 394.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.733333, 0.172549, 1 )
text = "ÔÅ±"
align = 1
valign = 2
script = ExtResource( 2 )
size = 30
icon = "warning"

[node name="Label_dinamic" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 394.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
text = "Alert msg"
align = 1
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
title_size = 24
Title_color = Color( 0.709804, 0.709804, 0.709804, 1 )
font = ExtResource( 5 )

[connection signal="gui_input" from="." to="." method="_on_Alert_gui_input"]
